# btp_project

./: .gitignore  LICENSE  MANIFEST.in  OVERVIEW.md  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  final.py  pyproject.toml  setup.py  technical_report.tex  verify_package.py
examples/: __init__.py  basic_usage.py
fsq_sdk/: __init__.py  decoder.py  encoder.py  logging_config.py  models.py  utils.py
tests/: test_fsq_sdk.py
